--- a/admin_portal/templates/admin_portal/investments_admin_tab.html
+++ b/admin_portal/templates/admin_portal/investments_admin_tab.html
@@ -79,42 +79,6 @@
                     <tbody>
                         {% for investment in investments %}
 
-                        <!-- Modal For Activate Investment -->
-                        <div class="modal fade" id="investmentStatusModal{{investment.id}}" tabindex="-1" aria-labelledby="investmentStatusLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <form action="" method="POST">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">
-                                                Activate / Deactivate Investment.
-                                            </h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <div>
-                                                {% if not investment.status %}
-                                                <p class="alert alert-success fw-bolder">Do you want to activate investment - {{investment.investment_plan.name}}?</p>
-                                                {% else %}
-                                                <p class="alert alert-danger fw-bolder">Do you want to deactivate student - {{student.user.username}}</p>
-                                                {% endif %}
-            
-                                                {% csrf_token %}
-                                                {{ toggle_form | crispy }}
-                                            </div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
-                                            <button type="submit" class="btn btn-outline-success">
-                                                Confirm
-                                            </button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-
-                        
-
                         <tr>
                             <!-- <td>   
                                 {{forloop.counter}}
@@ -157,25 +121,24 @@
                                         <i class="bi bi-three-dots"></i>
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                      <a 
-                                        class="dropdown-item py-2" 
-                                        href="#"
+            
+                                    <button 
+                                        class=" dropdown-item py-2 btn btn-outline-primary" 
                                         data-bs-toggle="modal" 
-                                        data-bs-target="#investmentStatusModal{{investment.id}}" 
-                                        aria-haspopup="true" 
-                                        aria-expanded="false"
+                                        data-bs-target="#investmentStatusModal"
+                                        onclick="showInvestmentModal('{{ investment.id }}', '{{ investment.status }}', '{{ investment.investment_plan.name }}')"
                                     >
                                         <b>
-                                            <i class="bi bi-check-all text-success"></i>
-                                            Activate Investment
-                                        </b>
-                                    </a>
+                                            <i class="bi bi-toggle-on"></i>
+                                            {{ investment.status|yesno:"Deactivate,Activate" }} Investment
+                                        </b>    
+                                    </button>
                                     <a 
                                         class="dropdown-item py-2" 
                                         href="#"
                                         onclick="loadInvestmentContent('{{investment.pk}}')"
                                         data-bs-toggle="modal" 
-                                        data-bs-target="#investmentStatusModal" 
+                                        data-bs-target="#investmentDetailsModal" 
                                     >
                                         <b>
                                             <i class="bi bi-chevron-double-right text-primary"></i>
@@ -206,7 +169,36 @@
 </section>
 
 
-
+<!-- Universal Modal For Investment Toggle -->
+<div class="modal fade" id="investmentStatusModal" tabindex="-1" aria-labelledby="investmentStatusLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="investmentStatusLabel">Toggle Investment Status</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <p id="modal-message" class="fw-bold"></p>
+                <!-- Loader -->
+                <div id="loader-screen" style="display: none;" class="text-center py-5">
+                    <div 
+                        class="spinner-border text-primary" 
+                        style=" width: 3rem; height: 3rem;" 
+                        role="status"
+                    >
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <p class="mt-3">Processing request...</p>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal">Close</button>
+                <button type="button" id="statusUpdateButton" class="btn btn-lg btn-success">Confirm</button>
+            </div>
+        </div>
+    </div>
+</div>
+    
 
  <!-- == Modal TO DISPLAY INVESTMENTS DETAILS == -->
  <div class="modal fade" id="investmentDetailsModal" tabindex="-2" aria-labelledby="investmentDetailsLabel1" aria-hidden="true">
@@ -220,53 +212,63 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body p-4">
-                    <table class="table">
-                        <tr>
-                            <td><p>Investment Name</p></td>
-                            <td><p class="fw-bold text-end" id="modal-investment-name"></p></td>
-                        </tr>
-                        <tr>
-                            <td><p>Amount</p></td>
-                            <td>
-                                <p class="fw-bold text-end" id="modal-amount">
-                                </p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><p>By</p></td>
-                            <td>
-                                <p class="fw-bold text-end" id="modal-user"></p>
-                            </td>
-                        </tr>
+                    <!-- Loader -->
+                    <div id="modal-loader" class="text-center py-5">
+                        <div class="spinner-border text-primary" style="width: 4rem; height: 4rem;" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <p class="mt-3">Fetching investment details...</p>
+                    </div>
+                    <!-- Actual Content -->
+                    <div id="modal-content" style="display: none;">
+                        <table class="table">
+                            <tr>
+                                <td><p>Investment Name</p></td>
+                                <td><p class="fw-bold text-end" id="modal-investment-name"></p></td>
+                            </tr>
+                            <tr>
+                                <td><p>Amount</p></td>
+                                <td>
+                                    <p class="fw-bold text-end" id="modal-amount">
+                                    </p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><p>By</p></td>
+                                <td>
+                                    <p class="fw-bold text-end" id="modal-user"></p>
+                                </td>
+                            </tr>
 
-                        <tr>
-                            <td><p> Paid?</p></td>
-                            <td>
-                                <p class="fw-bold text-end" id="modal-status"></p>
-                            </td>
-                        </tr>
+                            <tr>
+                                <td><p> Paid?</p></td>
+                                <td>
+                                    <p class="fw-bold text-end" id="modal-status"></p>
+                                </td>
+                            </tr>
 
-                        <tr>
-                            <td><p> Daily Profit</p></td>
-                            <td>
-                                <p class="fw-bold text-end" id="modal-daily-profit"></p>
-                            </td>
-                        </tr>
+                            <tr>
+                                <td><p> Daily Profit</p></td>
+                                <td>
+                                    <p class="fw-bold text-end" id="modal-daily-profit"></p>
+                                </td>
+                            </tr>
 
-                        <tr>
-                            <td><p>Date</p></td>
-                            <td>
-                                <p class="fw-bold text-end" id="modal-date"></p>
-                            </td>
-                        </tr>
-                    </table>
-                    
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+                            <tr>
+                                <td><p>Date</p></td>
+                                <td>
+                                    <p class="fw-bold text-end" id="modal-date"></p>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </form>
     </div>
 </div>
-    
+
+
