convert table to shadow small

--- a/admin_portal/templates/admin_portal/investments_admin_tab.html
+++ b/admin_portal/templates/admin_portal/investments_admin_tab.html
@@ -46,7 +46,7 @@
                     class="
                         bg-white 
                         rounded-2 
-                        shadow
+                        shadow-sm
                         table-responsive
                         p-5
                     "
