Adjusted the user withdrawals tab

--- a/users/templates/users/withdrawals_tab.html
+++ b/users/templates/users/withdrawals_tab.html
@@ -9,7 +9,7 @@
                 </legend>
                 <form method="post" class="p-5 border bg-light">
                     {% csrf_token %}
-                    {% crispy form %}
+                    {% crispy withdrawal_form %}
                 </form>
             </div>
 
