--- a/admin_portal/templates/admin_portal/referrals_admin_tab.html
+++ b/admin_portal/templates/admin_portal/referrals_admin_tab.html
@@ -78,7 +78,7 @@
                                 ${{investment.amount}}
                             </td>
                             <td>
-                                <span>${{investment.calculate_daily_profit}}</span> 
+                                <span>${{investment.amount}}</span> 
                             </td>
                             <td>
                                 {{investment.next_accrual_date}}
